@@ -78,6 +78,8 @@
 #include <ags/audio/recall/ags_mute_channel_run.h>
 #include <ags/audio/recall/ags_volume_channel.h>
 #include <ags/audio/recall/ags_volume_channel_run.h>
+#include <ags/audio/recall/ags_envelope_channel.h>
+#include <ags/audio/recall/ags_envelope_channel_run.h>
 #include <ags/audio/recall/ags_record_midi_audio.h>
 #include <ags/audio/recall/ags_record_midi_audio_run.h>
 #include <ags/audio/recall/ags_route_dssi_audio.h>
@@ -193,6 +195,12 @@ GList* ags_recall_factory_create_volume(AgsAudio *audio,
 					guint start_audio_channel, guint stop_audio_channel,
 					guint start_pad, guint stop_pad,
 					guint create_flags, guint recall_flags);
+GList* ags_recall_factory_create_envelope(AgsAudio *audio,
+					  AgsRecallContainer *play_container, AgsRecallContainer *recall_container,
+					  gchar *plugin_name,
+					  guint start_audio_channel, guint stop_audio_channel,
+					  guint start_pad, guint stop_pad,
+					  guint create_flags, guint recall_flags);
 GList* ags_recall_factory_create_ladspa(AgsAudio *audio,
 					AgsRecallContainer *play_container, AgsRecallContainer *recall_container,
 					gchar *plugin_name,
@@ -3277,6 +3285,165 @@ ags_recall_factory_create_volume(AgsAudio *audio,
 }
 
 GList*
+ags_recall_factory_create_envelope(AgsAudio *audio,
+				   AgsRecallContainer *play_container, AgsRecallContainer *recall_container,
+				   gchar *plugin_name,
+				   guint start_audio_channel, guint stop_audio_channel,
+				   guint start_pad, guint stop_pad,
+				   guint create_flags, guint recall_flags)
+{
+  AgsEnvelopeChannel *envelope_channel;
+  AgsEnvelopeChannelRun *envelope_channel_run;
+  AgsChannel *start, *channel;
+  AgsPort *port;
+
+  GList *list;
+  GList *recall;
+
+  guint i, j;
+  
+  if(audio == NULL){
+    return(NULL);
+  }
+
+  if((AGS_RECALL_FACTORY_OUTPUT & (create_flags)) != 0){
+    start =
+      channel = ags_channel_nth(audio->output,
+				start_pad * audio->audio_channels);
+  }else{
+    start =
+      channel = ags_channel_nth(audio->input,
+				start_pad * audio->audio_channels);
+  }
+
+  recall = NULL;
+
+  /* play */
+  if((AGS_RECALL_FACTORY_PLAY & (create_flags)) != 0){
+    if(play_container == NULL){
+      play_container = ags_recall_container_new();
+    }
+
+    play_container->flags |= AGS_RECALL_CONTAINER_PLAY;
+    ags_audio_add_recall_container(audio, (GObject *) play_container);
+
+    for(i = 0; i < stop_pad - start_pad; i++){
+      channel = ags_channel_nth(channel,
+				start_audio_channel);
+      
+      for(j = 0; j < stop_audio_channel - start_audio_channel; j++){
+	ags_channel_add_recall_container(channel, (GObject *) play_container);
+
+	/* AgsEnvelopeChannel */
+	envelope_channel = (AgsEnvelopeChannel *) g_object_new(AGS_TYPE_ENVELOPE_CHANNEL,
+							       "soundcard\0", audio->soundcard,
+							       "source\0", channel,
+							       "recall_container\0", play_container,
+							       NULL);
+							      
+	ags_recall_set_flags(AGS_RECALL(envelope_channel), (AGS_RECALL_TEMPLATE |
+							    (((AGS_RECALL_FACTORY_OUTPUT & create_flags) != 0) ? AGS_RECALL_OUTPUT_ORIENTATED: AGS_RECALL_INPUT_ORIENTATED) |
+							    AGS_RECALL_PLAYBACK |
+							    AGS_RECALL_SEQUENCER |
+							    AGS_RECALL_NOTATION));
+	ags_channel_add_recall(channel, (GObject *) envelope_channel, TRUE);
+	recall = g_list_prepend(recall,
+				envelope_channel);
+	ags_connectable_connect(AGS_CONNECTABLE(envelope_channel));
+
+	/* AgsEnvelopeChannelRun */
+	envelope_channel_run = (AgsEnvelopeChannelRun *) g_object_new(AGS_TYPE_ENVELOPE_CHANNEL_RUN,
+								      "soundcard\0", audio->soundcard,
+								      "recall-channel\0", envelope_channel,
+								      "source\0", channel,
+								      "recall_container\0", play_container,
+								      NULL);
+	ags_recall_set_flags(AGS_RECALL(envelope_channel_run), (AGS_RECALL_TEMPLATE |
+								(((AGS_RECALL_FACTORY_OUTPUT & create_flags) != 0) ? AGS_RECALL_OUTPUT_ORIENTATED: AGS_RECALL_INPUT_ORIENTATED) |
+								AGS_RECALL_PLAYBACK |
+								AGS_RECALL_SEQUENCER |
+								AGS_RECALL_NOTATION));
+	ags_channel_add_recall(channel, (GObject *) envelope_channel_run, TRUE);
+	recall = g_list_prepend(recall,
+				envelope_channel_run);
+	ags_connectable_connect(AGS_CONNECTABLE(envelope_channel_run));
+
+	/* iterate */
+	channel = channel->next;
+      }
+
+      channel = ags_channel_nth(channel,
+				audio->audio_channels - stop_audio_channel);
+    }
+  }
+
+  /* recall */
+  if((AGS_RECALL_FACTORY_RECALL & (create_flags)) != 0){
+    channel = start;
+
+    if(recall_container == NULL){
+      recall_container = ags_recall_container_new();
+    }
+
+    ags_audio_add_recall_container(audio, (GObject *) recall_container);
+
+    for(i = 0; i < stop_pad - start_pad; i++){
+      channel = ags_channel_nth(channel,
+				start_audio_channel);
+      
+      for(j = 0; j < stop_audio_channel - start_audio_channel; j++){
+	ags_channel_add_recall_container(channel, (GObject *) recall_container);
+
+	/* AgsEnvelopeChannel */
+	envelope_channel = (AgsEnvelopeChannel *) g_object_new(AGS_TYPE_ENVELOPE_CHANNEL,
+							       "soundcard\0", audio->soundcard,
+							       "source\0", channel,
+							       "recall_container\0", recall_container,
+							       NULL);
+							      
+	ags_recall_set_flags(AGS_RECALL(envelope_channel), (AGS_RECALL_TEMPLATE |
+							    (((AGS_RECALL_FACTORY_OUTPUT & create_flags) != 0) ? AGS_RECALL_OUTPUT_ORIENTATED: AGS_RECALL_INPUT_ORIENTATED) |
+							    AGS_RECALL_PLAYBACK |
+							    AGS_RECALL_SEQUENCER |
+							    AGS_RECALL_NOTATION));
+	ags_channel_add_recall(channel, (GObject *) envelope_channel, FALSE);
+	recall = g_list_prepend(recall,
+				envelope_channel);
+	ags_connectable_connect(AGS_CONNECTABLE(envelope_channel));
+
+	/* AgsEnvelopeChannelRun */
+	envelope_channel_run = (AgsEnvelopeChannelRun *) g_object_new(AGS_TYPE_ENVELOPE_CHANNEL_RUN,
+								      "soundcard\0", audio->soundcard,
+								      "recall_channel\0", envelope_channel,
+								      "source\0", channel,
+								      "recall_container\0", recall_container,
+								      NULL);
+	ags_recall_set_flags(AGS_RECALL(envelope_channel_run), (AGS_RECALL_TEMPLATE |
+								(((AGS_RECALL_FACTORY_OUTPUT & create_flags) != 0) ? AGS_RECALL_OUTPUT_ORIENTATED: AGS_RECALL_INPUT_ORIENTATED) |
+								AGS_RECALL_PLAYBACK |
+								AGS_RECALL_SEQUENCER |
+								AGS_RECALL_NOTATION));
+	ags_channel_add_recall(channel, (GObject *) envelope_channel_run, FALSE);
+	recall = g_list_prepend(recall,
+				envelope_channel_run);
+	ags_connectable_connect(AGS_CONNECTABLE(envelope_channel_run));
+
+	/* iterate */
+	channel = channel->next;
+      }
+
+      channel = ags_channel_nth(channel,
+				audio->audio_channels - stop_audio_channel);
+    }
+  }
+
+  /* return instantiated recall */
+  recall = g_list_reverse(recall);
+
+  return(recall);
+}
+
+GList*
 ags_recall_factory_create_ladspa(AgsAudio *audio,
 				 AgsRecallContainer *play_container, AgsRecallContainer *recall_container,
 				 gchar *plugin_name,
@@ -4280,6 +4447,15 @@ ags_recall_factory_create(AgsAudio *audio,
 					      start_audio_channel, stop_audio_channel,
 					      start_pad, stop_pad,
 					      create_flags, recall_flags);
+  }else if(!strncmp(plugin_name,
+		    "ags-envelope\0",
+		    11)){
+    recall = ags_recall_factory_create_envelope(audio,
+						play_container, recall_container,
+						plugin_name,
+						start_audio_channel, stop_audio_channel,
+						start_pad, stop_pad,
+						create_flags, recall_flags);
   }else if(!strncmp(plugin_name,
 		    "ags-ladspa\0",
 		    11)){
